p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          service:
            name: app3-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: app1.com
    http:
      paths:
      - backend:
          service:
            name: app1-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: app2.com
    http:
      paths:
      - backend:
          service:
            name: app2-service
            port:
              number: 3000
        path: /
        pathType: Prefix
